--- a/admin/index.html
+++ b/admin/index.html
@@ -21,7 +21,7 @@
         <link href="../css/cropper.min.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript" src="../js/cropper.min.js"></script>
 
-        <link rel="stylesheet" href="../css/bootstrap-colorpicker.min.css">
+        <link rel="stylesheet" href="../css/bootstrap-colorpicker.min.css" type="text/css">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,6 +31,7 @@
         <![endif]-->
         <script type="text/javascript" src="../ckeditor/ckeditor.js"></script>
         <link   href="css/admin.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
+        <link rel="stylesheet" href="../css/awesome-bootstrap-checkbox.css" type="text/css"/>
         <!--<script src='js/func_verif_profil.js'></script>-->
     </head>
     <body>
