correction du message ajouter lors du precedent commit

--- a/inscription.html
+++ b/inscription.html
@@ -64,7 +64,7 @@
                      else if($success==false)
                      { ?>
                         <div class="alert alert-danger" role="alert">
-                            <strong><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> </strong>Une erreur c'est produite lors de l'envoi du mail d'activation. Redirection dans <span id="compteur"></span>
+                            <strong><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> </strong>Une erreur s'est produite lors de l'envoi du mail d'activation. Redirection dans <span id="compteur"></span>
                         </div>
                 <?php
                      }
