--- a/inscription.html
+++ b/inscription.html
@@ -50,7 +50,7 @@
 		?>
         <div class="col-md-10 col-lg-offset-1 contenu">
             <h1 class="title_page" style="background-color: #046BAD ">
-                <img src="images/icone_site/inscription.png" height="75" width="75"></img>
+                <img src="images/icone_site/inscription.png" height="75" width="75">
                 <span>Inscription</span>
             </h1>
 			<div class="col-md-offset-3 col-md-6">
