mise du fichier de deconnection dans les fichiers consultable

--- a/admin/index.html
+++ b/admin/index.html
@@ -58,7 +58,7 @@
                     <div id="menu">
                         <p>
                             Vous êtes connecté en tant que :<br><strong><?php echo $_SESSION['pseudo']; ?></strong>
-                            [ <a href="../accessoires/deconnexion.php">Déconnexion</a> ]
+                            [ <a href="../deconnexion.php">Déconnexion</a> ]
                             <?php //var_dump($_SESSION); ?>
                         </p>
                             <?php if(isset($_GET['i']))
