--- a/description.html
+++ b/description.html
@@ -30,7 +30,7 @@
 		<div class="col-md-10 col-lg-offset-1 contenu espace_description">
 			<div style="float:left;">
 				<h3 class="title_page" style="background-color: #b12d69">
-                    <img src="images/icone_site/jeux_club.png" height="75" ></img>
+                    <img src="images/icone_site/jeux_club.png" height="75" >
                     <span>Les jeux du club</span>
                 </h3>
 				<p class="text_description">
@@ -46,7 +46,7 @@
 				{ ?>
 					<div class="col-xs-12 col-md-4 espace_description">
 						<a href="liste_jeu.php?jeu=<?php echo $id_type_jeu[$i]; ?>" class="thumbnail" style="">
-							<p style="text-align:center;color: #333;" ><img class="img-responsive" src="<?php echo $image_type_jeu[$i]; ?>" alt="<?php echo $libelle_type_jeu[$i]; ?>"></p>
+							<p style="text-align:center;color: #333;" ><img class="img-responsive" src="images/icone_site/<?php echo $image_type_jeu[$i]; ?>" alt="<?php echo $libelle_type_jeu[$i]; ?>"></p>
 							<h4 class="media-heading text-center underline" style="margin-top:10px;"><?php echo $libelle_type_jeu[$i]; ?></h4>
 							<p class="text_description" ><?php echo $description_type_jeu[$i]; ?></p>
 						</a>
